force-app/main/default/objects/Product2/fields/B2B_Addition_Max_Allowed__c.field-meta.xml
<CustomField>
    <fullName>B2B_Addition_Max_Allowed__c</fullName>
    <description>This field is used to store the maximum addition value allowed for the prescription.</description>
    <label>Addition Max Allowed</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>