force-app/main/default/objects/Product2/fields/B2B_Addition_Min_Allowed__c.field-meta.xml
<CustomField>
    <fullName>B2B_Addition_Min_Allowed__c</fullName>
    <description>This field is used to store the minimum addition value allowed for the prescription.</description>
    <label>Addition Min Allowed</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>