force-app/main/default/objects/Product2/fields/B2B_ARCoating__c.field-meta.xml
<CustomField>
    <fullName>B2B_ARCoating__c</fullName>
    <label>Antireflection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO0002</fullName>
                <label>Antireflection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>