force-app/main/default/objects/Product2/fields/B2B_Availability_JSON__c.field-meta.xml
<CustomField>
    <fullName>B2B_Availability_JSON__c</fullName>
    <label>Availability JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>