force-app/main/default/objects/Product2/fields/B2B_Axis_Min__c.field-meta.xml
<CustomField>
    <fullName>B2B_Axis_Min__c</fullName>
    <label>Axis Min</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>