force-app/main/default/objects/Product2/fields/B2B_Brand__c.field-meta.xml
<CustomField>
    <fullName>B2B_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Silhouette</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>evil eye</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>NEUBAU</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Vision Sensation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>