force-app/main/default/objects/Product2/fields/B2B_Coating__c.field-meta.xml
<CustomField>
    <fullName>B2B_Coating__c</fullName>
    <label>Antireflection / Hard Coating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HardCoating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>