force-app/main/default/objects/Product2/fields/B2B_Collection_End_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Collection_End_Date__c</fullName>
    <description>End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>