force-app/main/default/objects/Product2/fields/B2B_Collection_Flag__c.field-meta.xml
<CustomField>
    <fullName>B2B_Collection_Flag__c</fullName>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Current</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Discontinued</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>