force-app/main/default/objects/Product2/fields/B2B_Cylinder_Min_Allowed__c.field-meta.xml
<CustomField>
    <fullName>B2B_Cylinder_Min_Allowed__c</fullName>
    <label>Cylinder Min Allowed</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>