force-app/main/default/objects/Product2/fields/B2B_Disable_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Disable_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for the product availability to be ordered.</description>
    <label>Disable Product</label>
    <type>Checkbox</type>
</CustomField>