force-app/main/default/objects/Product2/fields/B2B_Face_Shape__c.field-meta.xml
<CustomField>
    <fullName>B2B_Face_Shape__c</fullName>
    <description>This field is used for defining the face shape product filter.</description>
    <label>Face Shape</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SG01</fullName>
                <label>Oval</label>
            </value>
            <value>
                <fullName>SG02</fullName>
                <label>Rectangular</label>
            </value>
            <value>
                <fullName>SG03</fullName>
                <label>Round</label>
            </value>
            <value>
                <fullName>SG04</fullName>
                <label>Square</label>
            </value>
            <value>
                <fullName>SG05</fullName>
                <label>Triangular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>