force-app/main/default/objects/Product2/fields/B2B_Finish__c.field-meta.xml
<CustomField>
    <fullName>B2B_Finish__c</fullName>
    <description>Finish</description>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>matt</fullName>
                <label>Matt</label>
            </value>
            <value>
                <fullName>glänzend</fullName>
                <label>Shiny</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>