force-app/main/default/objects/Product2/fields/B2B_Frame_Accent_Color_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Frame_Accent_Color_Description__c</fullName>
    <description>Accent Color Description</description>
    <label>Accent Color Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>