force-app/main/default/objects/Product2/fields/B2B_Frame_Color__c.field-meta.xml
<CustomField>
    <fullName>B2B_Frame_Color__c</fullName>
    <description>Field used for color filter.</description>
    <label>Main Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B2B_Color_Filter_Value_Set</valueSetName>
    </valueSet>
</CustomField>