force-app/main/default/objects/Product2/fields/B2B_Frame_type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Frame_type__c</fullName>
    <description>This field is used for setting the product frame type.</description>
    <label>Frame type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rimless</fullName>
            </value>
            <value>
                <fullName>Nylor</fullName>
            </value>
            <value>
                <fullName>Full Rim</fullName>
                <label>Fullrim</label>
            </value>
            <value>
                <fullName>Half Eye</fullName>
            </value>
            <value>
                <fullName>RX kit frames (unglazed)</fullName>
            </value>
            <value>
                <fullName>Shield Fullrim</fullName>
            </value>
            <value>
                <fullName>Shield Halfrim</fullName>
            </value>
            <value>
                <fullName>Shield Rimless</fullName>
            </value>
            <value>
                <fullName>Adapter</fullName>
                <isActive>false</isActive>
                <label>Adapter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>