force-app/main/default/objects/Product2/fields/B2B_Gender__c.field-meta.xml
<CustomField>
    <fullName>B2B_Gender__c</fullName>
    <description>Gender</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ladies</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>