force-app/main/default/objects/Product2/fields/B2B_Hexcode__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hexcode__c</fullName>
    <description>Hexcode Frame</description>
    <label>Hexcode Frame</label>
    <length>10</length>
    <type>Text</type>
</CustomField>