force-app/main/default/objects/Product2/fields/B2B_Hexcode_Accent__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hexcode_Accent__c</fullName>
    <description>Hexcode Accent</description>
    <label>Hexcode Accent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>