force-app/main/default/objects/Product2/fields/B2B_Hexcode_Lens__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hexcode_Lens__c</fullName>
    <description>This field store the the value of Hexcode Lens</description>
    <label>Hexcode Lens</label>
    <length>10</length>
    <type>Text</type>
</CustomField>