force-app/main/default/objects/Product2/fields/B2B_Is_Special__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Special__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be marked true if it a special variation</description>
    <label>Is Special</label>
    <type>Checkbox</type>
</CustomField>