force-app/main/default/objects/Product2/fields/B2B_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Launch_Date__c</fullName>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>