force-app/main/default/objects/Product2/fields/B2B_Lens_Color_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Color_Description__c</fullName>
    <description>Lens Color Description</description>
    <label>Lens Color Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>