force-app/main/default/objects/Product2/fields/B2B_Lens_Shape__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Shape__c</fullName>
    <description>This field is used for filtering products by the lens shape.</description>
    <label>Lens Shape</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SS01</fullName>
            </value>
            <value>
                <fullName>SS02</fullName>
            </value>
            <value>
                <fullName>SS03</fullName>
            </value>
            <value>
                <fullName>SS04</fullName>
            </value>
            <value>
                <fullName>SS05</fullName>
            </value>
            <value>
                <fullName>NS01</fullName>
            </value>
            <value>
                <fullName>NS02</fullName>
            </value>
            <value>
                <fullName>NS03</fullName>
            </value>
            <value>
                <fullName>NS04</fullName>
            </value>
            <value>
                <fullName>NS05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>