force-app/main/default/objects/Product2/fields/B2B_Lens_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Type__c</fullName>
    <description>The type of the lens</description>
    <label>Lens Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SV</fullName>
                <label>Panorama Single Vision</label>
            </value>
            <value>
                <fullName>PAL</fullName>
                <label>Panorama Progressive</label>
            </value>
            <value>
                <fullName>PALONE</fullName>
                <label>Panorama Progressiv ONE</label>
            </value>
            <value>
                <fullName>OFF</fullName>
                <label>Panorama Office Room / Desk</label>
            </value>
            <value>
                <fullName>RPAL</fullName>
                <label>Panorama Relax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>