force-app/main/default/objects/Product2/fields/B2B_LensFeatures__c.field-meta.xml
<CustomField>
    <fullName>B2B_LensFeatures__c</fullName>
    <label>Lens Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LensColor</fullName>
            </value>
            <value>
                <fullName>PhotoSensation</fullName>
            </value>
            <value>
                <fullName>UVPlus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>