force-app/main/default/objects/Product2/fields/B2B_Nosepad__c.field-meta.xml
<CustomField>
    <fullName>B2B_Nosepad__c</fullName>
    <description>Product nosepad</description>
    <label>Nosepad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <label>Adjustable</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Fixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>