force-app/main/default/objects/Product2/fields/B2B_Picture_Link__c.field-meta.xml
<CustomField>
    <fullName>B2B_Picture_Link__c</fullName>
    <description>Link Picture</description>
    <label>Link Picture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>