force-app/main/default/objects/Product2/fields/B2B_Prism_2_Max__c.field-meta.xml
<CustomField>
    <fullName>B2B_Prism_2_Max__c</fullName>
    <label>Prism 2 Max</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>