force-app/main/default/objects/Product2/fields/B2B_Product_Label__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Label__c</fullName>
    <description>Product Label</description>
    <label>Product Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>