force-app/main/default/objects/Product2/fields/B2B_Rimless_Variant__c.field-meta.xml
<CustomField>
    <fullName>B2B_Rimless_Variant__c</fullName>
    <description>Product rimless variant.</description>
    <label>Rimless Variant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Chassis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>