force-app/main/default/objects/Product2/fields/B2B_RX_Able__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Able__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RX-able</description>
    <label>RX-able</label>
    <type>Checkbox</type>
</CustomField>