force-app/main/default/objects/Product2/fields/B2B_RX_Solution__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Solution__c</fullName>
    <label>RX Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>adapter</fullName>
            </value>
            <value>
                <fullName>clipIn</fullName>
            </value>
            <value>
                <fullName>directGlazing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>