force-app/main/default/objects/Product2/fields/B2B_Salesconcept__c.field-meta.xml
<CustomField>
    <fullName>B2B_Salesconcept__c</fullName>
    <description>Salesconcept</description>
    <label>Salesconcept</label>
    <length>50</length>
    <type>Text</type>
</CustomField>