force-app/main/default/objects/Product2/fields/B2B_Shape_Area__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shape_Area__c</fullName>
    <description>Shape Area</description>
    <label>Shape Area</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>