force-app/main/default/objects/Product2/fields/B2B_Shape_Height__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shape_Height__c</fullName>
    <description>Shape Height</description>
    <label>Shape Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>