force-app/main/default/objects/Product2/fields/B2B_Shape_Mirror_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shape_Mirror_Description__c</fullName>
    <description>Mirror Color Description</description>
    <label>Mirror Color Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>