force-app/main/default/objects/Product2/fields/B2B_Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Status__c</fullName>
    <description>Shipping Status</description>
    <label>Shipping Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Ready to ship</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Available as of</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>No longer available</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>One-day processing time possible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>