force-app/main/default/objects/Product2/fields/B2B_Shipping_Status_JSON__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Status_JSON__c</fullName>
    <description>Field used for the response of the shipping status field.</description>
    <label>Shipping Status JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>