force-app/main/default/objects/Product2/fields/B2B_Sphere_Min__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sphere_Min__c</fullName>
    <label>Sphere Min</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>