force-app/main/default/objects/Product2/fields/B2B_Temple_Color__c.field-meta.xml
<CustomField>
    <fullName>B2B_Temple_Color__c</fullName>
    <label>Temple Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>