force-app/main/default/objects/Product2/fields/B2B_UPC_Code__c.field-meta.xml
<CustomField>
    <fullName>B2B_UPC_Code__c</fullName>
    <description>UPC Code</description>
    <label>UPC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>