force-app/main/default/objects/Product2/fields/B2B_WithEE_Sphere_Max__c.field-meta.xml
<CustomField>
    <fullName>B2B_WithEE_Sphere_Max__c</fullName>
    <description>This field holds the maximum value of Sphere when evil eye edge is applicable</description>
    <label>With EE Sphere Max</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>