force-app/main/default/objects/Product2/fields/B2C_Material__c.field-meta.xml
<CustomField>
    <fullName>B2C_Material__c</fullName>
    <description>This field is used to for Neubau products material information</description>
    <label>Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>naturalPX</fullName>
            </value>
            <value>
                <fullName>Stainless steel</fullName>
            </value>
            <value>
                <fullName>Material mix</fullName>
            </value>
            <value>
                <fullName>3D printed</fullName>
            </value>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>natural Acetate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>