force-app/main/default/objects/Product2/fields/D2C_Packaging__c.field-meta.xml
<CustomField>
    <fullName>D2C_Packaging__c</fullName>
    <description>This field will store the packaging items that will be included in the package with the product.</description>
    <label>Packaging</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Softcase</fullName>
            </value>
            <value>
                <fullName>Cleaning Cloth</fullName>
            </value>
            <value>
                <fullName>Hardcase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>