force-app/main/default/objects/Product2/fields/D2C_Variation_Details__c.field-meta.xml
<CustomField>
    <fullName>D2C_Variation_Details__c</fullName>
    <description
    >This field is used to store the variation details of the product variations on the parent product, the variations are then used in the PLP to display products for NBD2C store.</description>
    <label>Variation Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>