force-app/main/default/objects/Product2/fields/D2C_VTO_Lens_Shape_Icon__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Lens_Shape_Icon__c</fullName>
    <description>This will have the mediahub icon url of the shape representing for a particular product.</description>
    <label>Lens Shape Icon</label>
    <type>Url</type>
</CustomField>